--- a/DB/Dockerfile
+++ b/DB/Dockerfile
@@ -1,20 +1,15 @@
-# Use the official MySQL image from the Docker Hub
-FROM mysql:latest
+# Use Alpine-based MariaDB image for ARM-compatible systems
+FROM yobasystems/alpine-mariadb:latest
 
-# Set environment variables for MySQL
+# Set environment variables for MariaDB
 ENV MYSQL_ROOT_PASSWORD=rootpassword
 ENV MYSQL_DATABASE=mydatabase
 ENV MYSQL_USER=myuser
 ENV MYSQL_PASSWORD=mypassword
 
-# Expose the default MySQL port
+# Expose the default MariaDB port
 EXPOSE 3306
 
 # Copy the SQL script into the Docker container
 COPY script.sql /docker-entrypoint-initdb.d/
 
-# Add a custom configuration file if needed
-# COPY my.cnf /etc/mysql/my.cnf
-
-# Run the MySQL server
-CMD ["mysqld"]
