Add docker containerization

--- a/DB/Makefile
+++ b/DB/Makefile
@@ -1,7 +1,7 @@
 run: stop
 	-docker network create ponynetwork
 	docker build -t db-image .
-	docker run --name db -v mysql-data:/var/lib/mysql \
+	docker run --platform linux/arm64/v8 --name db -v mysql-data:/var/lib/mysql \
 	--network=ponynetwork \
 	-p 3306:3306 -d db-image
 
@@ -17,3 +17,16 @@ logs:
 
 exec-script:
 	docker exec -it db //bin//bash -c "mysql -u root -prootpassword mydatabase < /docker-entrypoint-initdb.d/script.sql"
+
+clean: stop
+	-docker volume rm mysql-data
+
+# New recipe to query the SQL database:
+query:
+	@echo "Displaying all rows from 'messages' table..."
+	docker exec -it db /bin/sh -c "mysql -u root -prootpassword -e 'SELECT * FROM messages;' mydatabase"
+
+
+dump:
+	@echo "Dumping database 'mydatabase' to file 'db_dump.sql'..."
+	docker exec db /bin/sh -c "mysqldump -u root -prootpassword mydatabase" > db_dump.sql
